# transparent

./: .env.age  .env.example  .gitignore  Anchor.toml  BUGS.md  ESCROW_MIGRATION.md  HACKATHON.md  IDEAS.md  MANUS_BRIEFING.md  MANUS_MVP_STRATEGY.md  QUESTIONS_V1.md  README.md  REPORT.md  index.html  package-lock.json  package.json  test-game.mjs  vercel.json  vite.config.ts
programs/transparent/: Cargo.toml
programs/transparent/src/: lib.rs
smart-contract/: Anchor.toml
smart-contract/client/: client.ts
smart-contract/tests/: native.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AIVibeCheck.tsx  AnimatedBackground.tsx  Avatar.tsx  BackButton.tsx  Background.tsx  Blobs.tsx  ErrorBoundary.tsx  GlassCard.tsx  GlowButton.tsx  HostQuestionPicker.tsx  MagicBlockBadge.tsx  PlayerQuestionVote.tsx  QuestionSubmitPhase.tsx  QuestionVotePhase.tsx  RaisePot.tsx  SolMark.tsx  StorytellerPhase.tsx  Ticker.tsx  TokenMark.tsx  TransparentLogo.tsx  WalletBridge.tsx  WalletChip.tsx  WalletDrawer.tsx  WalletHeader.tsx  WalletSetupGate.tsx  index.ts
src/contexts/: GameContext.tsx  PrivyContext.tsx
src/data/: ai-questions.json
src/hooks/: useSolPrice.ts  useWalletBalance.ts
src/lib/: anchor-escrow.ts  anchor.ts  config.ts  gameAuth.ts  magicblock.ts  schema-full.sql  schema.sql  supabase.ts
src/pages/: CreateGamePage.tsx  GameCreatedPage.tsx  GameOverPage.tsx  GamePlayPage.tsx  HomePage.tsx  HowToPlayPage.tsx  JoinGamePage.tsx  NotFoundPage.tsx  WaitingRoomPage.tsx  WaitlistPage.tsx
src/types/: game.ts
supabase/: schema.sql
(+10 files in other folders)
