[package]
name = "transparent"
version = "0.1.0"
description = "Trustless escrow for the Transparent party game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transparent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
